<resources>
    <string name="app_name">myNotesNative</string>
    <string name="example_date">March 23, 1998</string>
    <string name="starred_note_descr">Indicates if the Note is starred</string>
    <string name="locked_note_descr">Indicates if the Note is locked</string>
    <string name="add_note">Add note</string>
    <string name="note_title">Note Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">back</string>
    <string name="color_lens">color lens</string>
    <string name="star">star</string>
    <string name="lock">lock</string>
    <string name="increase_text_size">increase text size</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="title">Title</string>
    <string name="body">Note Body</string>
    <string name="show_menu">Show Menu</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="quick_add_note">Quick Add Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="ex_1234">ex: 1234</string>
    <string name="mynotesnative">myNotesNative</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorites">Favorites</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="st_grid_layout">Staggered Grid Layout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="toggle_favorites">Toggle Favorites</string>
    <string name="passcode">passcode</string>
    <string name="full_name">Full Name</string>
</resources>