<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_root"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    tools:context=".auth_activities.SignInActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et" />

    <EditText
        android:id="@+id/cPassword_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_et" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:backgroundTint="@color/blueish_idk"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cPassword_et"
        app:layout_goneMarginTop="@dimen/_10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>